# Thumbnail-Generation

./: .coverage  .gitignore  CODEBASE_SUMMARY.md  Dockerfile  Jenkinsfile  TEST_AND_SONAR_CHANGELOG.md  coverage.xml  pyproject.toml  sonar-project.properties
app/: config.py  main.py  utils.py
app/libs/: base_storage.py  storage.py
app/routers/: __init__.py
app/routers/v2/: course.py
app/services/v2/: image_variation.py
demo_app/: frontend.py
tests/: conftest.py  test_app_lifecycle.py  test_course.py  test_image_variation_service.py  test_image_variation_service_v2.py  test_resource.py  test_storage.py  test_utils.py
