[tool.poetry]
name = "KB Image Generation API"
version = "0.1.0"
description = ""
authors = ["Vaibhav Bhuva <vaibhav.bhuva@tarento.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
langchain = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
locust = "^2.31.4"
vertexai = "^1.66.0"
matplotlib = "^3.9.2"


[tool.poetry.dev-dependencies]
# Versions marked [UNVERIFIED — not in poetry.lock; run `poetry add --group dev <pkg>` to pin]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
# httpx 0.27.2 is already a transitive dep [poetry.lock]; declared here for explicitness
httpx = "^0.27.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/config.py",
    "app/logger.py",
    "app/**/migrations/**",
    "app/**/__init__.py",
    # Dead code — only used by commented-out route [app/routers/course.py:13-27]
    "app/services/course.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
